[project]
name = "grizzly-common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-servicebus>=7.14.2",
    "behave>=1.3.1",
    "jinja2>=3.1.6",
    "jinja2-simple-tags>=0.6.1",
    "jsonpath-ng>=1.7.0",
    "lxml>=6.0.1",
    "pyotp>=2.9.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "setproctitle>=1.3.6",
]

[project.scripts]
async-messaged = "grizzly_common.async_message.daemon:main"

[project.optional-dependencies]
mq = [
    "pymqi>=1.12.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "types-python-dateutil>=2.9.0.20250822",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20250809",
]
