[project]
name = "grizzly-loadtester-common"
dynamic = ["version"]
description = "Common functionality for grizzly-loadtester packages"
license = "MIT"
authors = [
    { name = "biometria", email="opensource@biometria.se" },
    { name = "Mikael Göransson", email = "github@mgor.se" }
]
requires-python = ">=3.10"
dependencies = [
    "azure-servicebus>=7.14.2",
    "behave>=1.3.1",
    "jinja2>=3.1.6",
    "jinja2-simple-tags>=0.6.1",
    "jsonpath-ng>=1.7.0",
    "lxml>=6.0.1",
    "pyotp>=2.9.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "setproctitle>=1.3.6",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython"
]
keywords = [
    "locust",
    "behave",
    "load",
    "loadtest",
    "performance",
    "traffic generator"
]

[project.scripts]
async-messaged = "grizzly_common.async_message.daemon:main"

[project.optional-dependencies]
mq = [
    "pymqi>=1.12.11",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grizzly_common"]

[tool.hatch.build.targets.sdist]
include = ["src/grizzly_common"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
tag_regex = "^common@(?P<version>[v]\\d+(?:\\.\\d+){0,2}[^\\+]*?)(?:\\+.*)?$"
scm.git.describe_command = "git describe --dirty --tags --long --abbrev=40 --match 'common@v*[0-9]*'"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
root = "../"

[tool.hatch.build.hooks.vcs]
version-file = "src/grizzly_common/__version__.py"

[dependency-groups]
dev = [
    "types-python-dateutil>=2.9.0.20250822",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20250809",
]
