[project]
name = "grizzly-loadtester-ls"
dynamic = ["version"]
description = "LSP server implementation for grizzly-loadtester load scenario development"
readme = "README.md"
license = "MIT"
authors = [
    { name = "biometria", email="opensource@biometria.se" },
    { name = "Mikael Göransson", email = "github@mgor.se" }
]
requires-python = ">=3.10"
dependencies = [
    "behave>=1.3.1",
    "colorama>=0.4.6",
    "jinja2>=3.1.6",
    "jinja2-simple-tags>=0.6.1",
    "ordered-set>=4.1.0",
    "pip>=25.2",
    "pygls>=1.3.1",
    "random-word>=1.0.13",
]
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython'
]
keywords = [
    'locust',
    'behave',
    'grizzly',
    'grizzly-loadtester',
    'loadtest',
    'load',
    'performance',
    'traffic generator',
    'lsp',
    'vscode'
]

[project.urls]
Documentation = 'https://biometria-se.github.io/grizzly/editor-support/'
Code = 'https://github.com/biometria-se/grizzly/'
Tracker = 'https://github.com/Biometria-se/grizzly/issues'

[project.scripts]
grizzly-ls = 'grizzly_ls.__main__:main'

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist.hooks.custom]
path = "../hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/grizzly_ls"]

[tool.hatch.build.targets.sdist]
include = ["src/grizzly_ls"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
tag_regex = "^ls@(?P<version>[v]\\d+(?:\\.\\d+){0,2}[^\\+]*?)(?:\\+.*)?$"
scm.git.describe_command = "git describe --dirty --tags --long --abbrev=40 --match 'ls@v*[0-9]*'"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
root = "../"

[dependency-groups]
debug = [
    "debugpy>=1.8.16",
]
dev = [
    "grizzly-loadtester",
    "grizzly-loadtester-common",
    "types-colorama>=0.4.15.20250801",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/grizzly_ls/__version__.py"

[tool.uv.sources]
grizzly-loadtester = { workspace = true }
grizzly-loadtester-common = { workspace = true }
