[project]
name = "grizzly-loadtester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-iot-device>=2.14.0",
    "azure-storage-blob>=12.26.0",
    "grizzly-loadtester-common",
    "influxdb>=5.3.2",
    "influxdb-client>=1.49.0",
    "locust>=2.39.0",
    "roundrobin>=0.0.4",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython"
]
keywords = [
    "locust",
    "behave",
    "load",
    "loadtest",
    "performance",
    "traffic generator"
]

[project.urls]
Documentation = 'https://biometria-se.github.io/grizzly/'
Code = 'https://github.com/biometria-se/grizzly/'
Tracker = 'https://github.com/Biometria-se/grizzly/issues'

[project.optional-dependencies]
mq = [
    "grizzly-loadtester-common[mq]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grizzly"]

[tool.uv.sources]
grizzly-loadtester-common = { workspace = true }


